[package]
name = "astrocore"
version = "0.1.0"
edition = "2024"

[dependencies]
block-buffer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
secp256k1 = { version = "0.29", features = ["rand", "serde"] }
rand = "0.8"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }